--- a/Project 1/requirements.txt
+++ b/Project 1/requirements.txt
@@ -1,4 +1,3 @@
-Flask>=1.1.1
 numpy>=1.17.4
 pandas>=0.25.3
 scikit-learn>=0.21.3
@@ -11,3 +10,4 @@ Werkzeug
 seaborn
 joblib
 streamlit
+Randomforest
